--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
@@ -46,7 +46,7 @@
 					@if (Model.DisplayPdfExport)
 					{
 						<li>
-							<a href="@Url.Action("ExportPdfAll")">
+							<a href="@Url.Action("ExportPdf", new { all = true })">
 								<i class="fa fa-fw fa-file-pdf-o"></i>
 								@T("Admin.Common.ExportToPdf.All")
 							</a>
@@ -71,7 +71,7 @@
 					@if (Model.DisplayPdfExport)
 					{
 						<li>
-							<a href="javascript:void(0)" class="export-form-post" data-url="@Url.Action("ExportPdfSelected")">
+							<a href="javascript:void(0)" class="export-form-post" data-url="@Url.Action("ExportPdf", new { all = false })">
 								<i class="fa fa-fw fa-file-pdf-o"></i>
 								@T("Admin.Common.ExportToPdf.Selected")
 							</a>
