--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/PdfCatalog.Print.Footer.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/PdfCatalog.Print.Footer.cshtml
@@ -8,7 +8,10 @@
 
 <hr />
 
-<div class="pull-right">
-	<span class="page"></span> von <span class="topage"></span>
+<div class="clearfix">
+	<div class="pull-right">
+		<span class="page"></span> von <span class="topage"></span>
+	</div>
+	<div class="title"></div>
 </div>
-<span class="title"></span>
+
