Removed obsolete pdf converter code

--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentDetails.Print.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentDetails.Print.cshtml
@@ -106,7 +106,7 @@
                 </div>
             </div>
 
-            <h3>@T("PDFPackagingSlip.ProductListHeadline")</h3>
+            <h3 style="margin-top: 100px">@T("PDFPackagingSlip.ProductListHeadline")</h3>
 
             <table class="table order-summary">
                 <thead>
