--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/PdfCatalog.Print.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/PdfCatalog.Print.cshtml
@@ -20,15 +20,137 @@
             <p>
                 @product.ShortDescription
             </p>
+
+            <div>
+
+                <table>
+                    @if (!String.IsNullOrEmpty(product.Sku)) { 
+                        <tr>
+                            <td width="25%" class="attr-caption">
+                                @T("Admin.Common.ExportToPdf.Sku"):
+                            </td>
+                            <td>
+                                @product.Sku
+                            </td>
+                        </tr>
+                    }
+                    @if (!String.IsNullOrEmpty(product.Manufacturer))
+                    {
+                        <tr>
+                            <td width="25%" class="attr-caption">
+                                @T("Admin.Common.ExportToPdf.Manufacturer"):
+                            </td>
+                            <td>
+                                @product.Manufacturer
+                            </td>
+                        </tr>
+                    }
+                    @if (!String.IsNullOrEmpty(product.Weight))
+                    {
+                        <tr>
+                            <td width="25%" class="attr-caption">
+                                @T("Admin.Common.ExportToPdf.Weight"):
+                            </td>
+                            <td>
+                                @product.Weight
+                            </td>
+                        </tr>
+                    }
+                    @if (!String.IsNullOrEmpty(product.Length))
+                    {
+                        <tr>
+                            <td width="25%" class="attr-caption">
+                                @T("Admin.Common.ExportToPdf.Length"):
+                            </td>
+                            <td>
+                                @product.Length
+                            </td>
+                        </tr>
+                    }
+                    @if (!String.IsNullOrEmpty(product.Width))
+                    {
+                        <tr>
+                            <td width="25%" class="attr-caption">
+                                @T("Admin.Common.ExportToPdf.Width"):
+                            </td>
+                            <td>
+                                @product.Width
+                            </td>
+                        </tr>
+                    }
+                    @if (!String.IsNullOrEmpty(product.Height))
+                    {
+                        <tr>
+                            <td width="25%" class="attr-caption">
+                                @T("Admin.Common.ExportToPdf.Height"):
+                            </td>
+                            <td>
+                                @product.Height
+                            </td>
+                        </tr>
+                    }
+                </table>
+
+            </div>
+
             <p>
                 @Html.Raw(product.FullDescription)
             </p>
+
 			@if (product.PictureUrl.HasValue())
 			{
 				<div class="text-center margin-top-50">
 					<img src="@product.PictureUrl" />
 				</div>
 			}
+            
+            @if(product.SpecificationAttributes.Count > 0)
+            {
+                <h3>Spezifikationsattribute</h3>
+                <table class="margin-top-30 table">
+                    @foreach (var specattr in product.SpecificationAttributes)
+                    {
+                        <tr>
+                            <td width="25%" class="attr-caption">
+                                @specattr.SpecificationAttributeName :
+                            </td>
+                            <td>
+                                @specattr.SpecificationAttributeOption
+                            </td>
+                        </tr>
+                    }
+                </table>    
+            }
+            
+            @if(product.BundledItems.Count > 0) 
+            {
+                <hr />
+                <h3>Bundle Produkte</h3>
+                foreach (var bundleProduct in product.BundledItems)
+                {
+                    <div style="width:50%;float:left;">
+                        <div style="float: left; margin-right: 20px">
+                            <img src="@bundleProduct.PictureUrl" />
+                        </div>
+                        <div>@bundleProduct.Name</div>
+                    </div>
+                }
+            }
+
+            @if (product.AssociatedProducts.Count > 0)
+            {
+                <hr />
+                <h3>Gruppierte Produkte</h3>
+                foreach (var groupedProduct in product.AssociatedProducts)
+                {
+                    <div style="width:50%;float:left;">
+                        <div style="float:left;margin-right:20px">
+                            <img src="@groupedProduct.PictureUrl" />
+                        </div>
+                        <div>@groupedProduct.Name</div>
+                    </div>
+                }
+            }
 
         </div>
     }
