Export PDF catalog: finalization

--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/PdfCatalog.Print.Footer.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/PdfCatalog.Print.Footer.cshtml
@@ -12,6 +12,8 @@
 	<div class="pull-right">
 		<span class="page"></span> von <span class="topage"></span>
 	</div>
-	<div class="title"></div>
+	<div class="title" style="text-align:center">
+        @Model.StoreName
+    </div>
 </div>
 
