--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentDetails.Print.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentDetails.Print.cshtml
@@ -10,6 +10,12 @@
 
     //title
     Html.AddTitleParts(T("Admin.Orders.Shipments.ViewDetails").Text);
+
+    var pdfMode = ViewBag.PdfMode == true;
+    if (!pdfMode)
+    {
+        Html.AddBodyCssClass("screen");
+    }
 }
 
 @functions {
@@ -29,6 +35,7 @@
         var colWidths = new int[] { 50, 20, 10 };
     
         <div class="document">
+            @Html.Widget("shipmentdetails_top")
             <!-- Address & Info -->
             <div class="clearfix">
                 <div class="order-address margin-top-40 pull-left">
@@ -43,10 +50,10 @@
                     </div>
                     <div class="margin-top-10">
                         @if (address.Company.HasValue())
-                        {
+{
                             <div>@address.Company</div>
                         }
-                        <div>@address.FirstName @address.LastName</div>
+                        <div>@JoinValues(new string[] { address.FirstName, address.LastName })</div>
                         @if (address.Address1.HasValue())
                         {
                             <div>@address.Address1</div>
@@ -57,25 +64,16 @@
                         }
                         @if (address.ZipPostalCode.HasValue() || address.City.HasValue())
                         {
-                            <div>@address.ZipPostalCode @address.City</div>
+                            <div>@JoinValues(new string[] { address.ZipPostalCode, address.City })</div>
                         }
                         @if (address.StateProvince != null || address.Country != null)
                         {
-                            <div>
-                                @address.Country.Name.EmptyNull()
-
-                                @if (address.StateProvince != null && address.StateProvince.Name.HasValue())
-                                {
-                                    if (address.Country.Name.HasValue())
-                                    {
-                                        <text>, </text>
-                                    }
-                                    <text>@address.StateProvince.Name</text>
-                                }
-                            </div>
+                            <div>@JoinValues(new string[] { address.Country.Name, address.StateProvince.Name }, ", ")</div>
                         }
                     </div>
                 </div>
+
+                @Html.Widget("shipmentdetails_orderinfo_top")
 
                 <div class="order-info text-small pull-right">
                     <table>
@@ -103,9 +101,13 @@
                             <td class="value">@shipment.ShippingMethod</td>
                         </tr>
                     </table>
+
+                    @Html.Widget("shipmentdetails_orderinfotable_after")
                 </div>
+                @Html.Widget("shipmentdetails_orderinfo_bottom")
             </div>
 
+            @Html.Widget("shipmentdetails_lines_before")
             <h3 style="margin-top: 100px">@T("PDFPackagingSlip.ProductListHeadline")</h3>
 
             <table class="table order-summary">
