--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
@@ -28,6 +28,7 @@
             $("#@Html.FieldIdFor(model => model.ProductSearchAllowCustomersToSelectPageSize)").click(toggleSearchPageSize);
             $("#@Html.FieldIdFor(model => model.ProductSearchAutoCompleteEnabled)").click(toggleProductSearchAutoComplete);
             $("#@Html.FieldIdFor(model => model.CompareProductsEnabled)").click(toggleCompareProducts);
+            $("#@Html.FieldIdFor(model => model.EnableHtmlTextCollapser)").click(toggleHtmlTextCollapsedHeight);
 
             toggleShowCategoryProductNumberIncludingSubcategories();
             toggleEmailAFriend();
@@ -39,6 +40,7 @@
             toggleSearchPageSize();
             toggleProductSearchAutoComplete();
             toggleCompareProducts();
+            toggleHtmlTextCollapsedHeight();
         });
 
         function toggleShowCategoryProductNumberIncludingSubcategories() {
@@ -130,6 +132,14 @@
             }
         }
         
+        function toggleHtmlTextCollapsedHeight() {
+            if ($('#@Html.FieldIdFor(model => model.EnableHtmlTextCollapser)').is(':checked')) {
+                $('#pnlHtmlTextCollapsedHeight').show();
+            }
+            else {
+                $('#pnlHtmlTextCollapsedHeight').hide();
+            }
+        }
     </script>
 	
 	@Html.Action("StoreScopeConfiguration", "Setting")
@@ -275,7 +285,7 @@
                 @Html.ValidationMessageFor(model => model.EnableHtmlTextCollapser)
             </td>
         </tr>
-        <tr>
+        <tr id="pnlHtmlTextCollapsedHeight">
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.HtmlTextCollapsedHeight)
             </td>
@@ -346,6 +356,16 @@
                     @Html.ValidationMessageFor(model => model.FilterEnabled)
                 </td>
             </tr>
+            <tr>
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.ShowSubcategoriesAboveProductLists)
+                </td>
+                <td class="adminData">
+                    @Html.SettingEditorFor(model => model.ShowSubcategoriesAboveProductLists)
+                    @Html.ValidationMessageFor(model => model.ShowSubcategoriesAboveProductLists)
+                </td>
+            </tr>
+
         </table>
     </fieldset>
     
