* Removed obsolete pdf service stuff (iTextSharp & code) * Verified that all unit tests pass

--- a/src/Presentation/SmartStore.Web/Administration/Views/Home/About.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Home/About.cshtml
@@ -185,17 +185,6 @@
 			</li>
 			<li>
 				<div class="name">
-					<a href="http://itextpdf.com/" rel="nofollow" target="AboutTargetWin">iTextSharp</a>
-				</div>
-				<div class="copyright">
-					
-				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/Affero_General_Public_License" rel="nofollow" target="AboutTargetWin">Affero General Public License</a>
-				</div>
-			</li>
-			<li>
-				<div class="name">
 					<a href="https://github.com/Taritsyn/JavaScriptEngineSwitcher" rel="nofollow" target="AboutTargetWin">JavaScriptEngineSwitcher</a>
 				</div>
 				<div class="copyright">
@@ -369,6 +358,17 @@
 				</div>
 				<div class="license">
 					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/MIT_License" rel="nofollow" target="AboutTargetWin">MIT</a>
+				</div>
+			</li>
+			<li>
+				<div class="name">
+					<a href="http://wkhtmltopdf.org/" rel="nofollow" target="AboutTargetWin">wkhtmltopdf</a>
+				</div>
+				<div class="copyright">
+
+				</div>
+				<div class="license">
+					<span>@(license):</span> <a href="https://www.gnu.org/licenses/lgpl.html" rel="nofollow" target="AboutTargetWin">LGPL</a>
 				</div>
 			</li>
 		</ul>
