--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/PdfCatalog.Print.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/PdfCatalog.Print.cshtml
@@ -105,7 +105,7 @@
 
             @if (product.PictureUrl.HasValue())
             {
-                <div class="text-center margin-top-50">
+                <div class="text-center margin-top-50 detail-picture">
                     <img src="@product.PictureUrl" />
                 </div>
             }
