--- a/src/Presentation/SmartStore.Web/Views/Common/PdfReceiptHeader.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/PdfReceiptHeader.cshtml
@@ -2,7 +2,7 @@
 @using SmartStore.Web.Framework.Pdf;
 
 @{
-	Layout = "~/Views/Shared/_Print.cshtml";
+	Layout = ViewBag.IsPartial == true ? "" : "~/Views/Shared/_Print.cshtml";
 }
 
 <header>
