--- a/src/Presentation/SmartStore.Web/Administration/Views/Blog/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Blog/_CreateOrUpdate.cshtml
@@ -62,6 +62,15 @@
         </tr>
         <tr>
             <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.CreatedOnUtc)
+            </td>
+            <td class="adminData">
+                @Html.EditorFor(model => model.CreatedOnUtc)
+                @Html.ValidationMessageFor(model => model.CreatedOnUtc)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.StartDate)
             </td>
             <td class="adminData">
